syntax = "proto3";
package sei.tokenfactory.v1;

import "gogoproto/gogo.proto";
import "tokenfactory/v1/authorityMetadata.proto";
import "tokenfactory/v1/params.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/tokenfactory/types";

// GenesisState defines the tokenfactory module's genesis state.
message GenesisState {
  // params defines the paramaters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];

  repeated GenesisDenom factory_denoms = 2 [
    (gogoproto.moretags) = "yaml:\"factory_denoms\"",
    (gogoproto.nullable) = false
  ];
}

// GenesisDenom defines a tokenfactory denom that is defined within genesis
// state. The structure contains DenomAuthorityMetadata which defines the
// denom's admin.
message GenesisDenom {
  option (gogoproto.equal) = true;

  string denom = 1 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
  DenomAuthorityMetadata authority_metadata = 2 [
    (gogoproto.moretags) = "yaml:\"authority_metadata\"",
    (gogoproto.nullable) = false
  ];
}
